Button alignment fixes

--- a/src/styles/spacings.scss
+++ b/src/styles/spacings.scss
@@ -1,15 +1,16 @@
-:root{
-  --navbar-height: 100px;
-}
-
 .text-segment {
   margin-top: 4em;
   margin-bottom: 2em;
 }
 
-.next-desktop {
+.next-desktop-right {
   margin-top: 3em;
   text-align: right;
+}
+
+.next-desktop-center {
+  margin-top: 3em;
+  text-align: center;
 }
 
 .next-mobile {
@@ -23,4 +24,15 @@
 
 .negative-space-column {
   width: 2em;
+}
+
+@media only screen and (max-width: 860px) {
+  .mobile-full-width {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
+.full-width {
+  width: 100%;
 }
